--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <title>Document</title>
 </head>
 <body>
+    <h1> Just learning </h1>
     <p> Hello World </p>
+    <p> This is a new feature </p>
 </body>
 </html>
